Fix overflow issue in CarouselFlip - Add overflow-x: hidden to body and html

--- a/assets/styles/utils/_page.css
+++ b/assets/styles/utils/_page.css
@@ -15,10 +15,12 @@ html {
 
   transition: background-color 0.4s ease, color 0.4s ease;
   scrollbar-gutter: stable;
+  overflow-x: hidden;
 }
 body {
   color: var(--grayscale-text-body);
   font-family: var(--font-family);
   font-size: var(--step-1);
   transition: background-color 0.4s ease, color 0.4s ease;
+  overflow-x: hidden;
 }
